[gd_scene load_steps=25 format=3 uid="uid://b36ylrhp1xdvy"]

[ext_resource type="Texture2D" uid="uid://dfidsh3nmvrrt" path="res://super-bazza-bogan/bazzabogan.png" id="1_76mso"]
[ext_resource type="Script" path="res://player.gd" id="1_j3ajf"]
[ext_resource type="Texture2D" uid="uid://b367r28vwe8os" path="res://super-bazza-bogan/New Piskel.png" id="3_stusk"]
[ext_resource type="Texture2D" uid="uid://bswhwc24obdin" path="res://super-bazza-bogan/lorax_1.png" id="4_ei3ot"]
[ext_resource type="AudioStream" uid="uid://bwwagwdqsapih" path="res://super-bazza-bogan/taco-bell-sound.mp3" id="4_slrmg"]
[ext_resource type="AudioStream" uid="uid://bu32km8m4pwd1" path="res://super-bazza-bogan/Vine-boom-sound-effect.mp3" id="5_upksc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lg4vm"]
atlas = ExtResource("1_76mso")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_16tw3"]
atlas = ExtResource("1_76mso")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7e3bi"]
atlas = ExtResource("1_76mso")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mln4q"]
atlas = ExtResource("1_76mso")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7unsd"]
atlas = ExtResource("1_76mso")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5if0"]
atlas = ExtResource("1_76mso")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhdht"]
atlas = ExtResource("3_stusk")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ok4cy"]
atlas = ExtResource("3_stusk")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1u8d"]
atlas = ExtResource("3_stusk")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q56ju"]
atlas = ExtResource("3_stusk")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcrkx"]
atlas = ExtResource("4_ei3ot")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_shbdo"]
atlas = ExtResource("3_stusk")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7e7g"]
atlas = ExtResource("3_stusk")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkwqx"]
atlas = ExtResource("3_stusk")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_qoa0l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lg4vm")
}],
"loop": true,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_16tw3")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7e3bi")
}],
"loop": true,
"name": &"jump",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mln4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7unsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5if0")
}],
"loop": true,
"name": &"run",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhdht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ok4cy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1u8d")
}],
"loop": false,
"name": &"thong_fire",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q56ju")
}],
"loop": true,
"name": &"thong_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcrkx")
}],
"loop": true,
"name": &"thong_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_shbdo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7e7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkwqx")
}],
"loop": true,
"name": &"thong_run",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8je2n"]
radius = 9.0
height = 32.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f6ck4"]
size = Vector2(22, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_11qs8"]
size = Vector2(26, 6)

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_j3ajf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_qoa0l")
animation = &"thong_run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -16)
shape = SubResource("CapsuleShape2D_8je2n")

[node name="hitbox" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, -17.5)
shape = SubResource("RectangleShape2D_f6ck4")

[node name="feet" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="feet"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_11qs8")

[node name="death_timer" type="Timer" parent="."]

[node name="ThongFireTimer" type="Timer" parent="."]

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_slrmg")

[node name="deathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_upksc")

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
